# KiritClientMC

./: README.md  index.html  package-lock.json  package.json  version.json
kiritclient-mod/: .gitignore  build.gradle  gradle.properties  settings.gradle
kiritclient-mod/src/main/java/dev/imkirit/client/: KiritClientMod.java  KiritConfig.java
kiritclient-mod/src/main/java/dev/imkirit/client/cape/: CapeManager.java
kiritclient-mod/src/main/java/dev/imkirit/client/feature/: EspManager.java  (+6 more)
kiritclient-mod/src/main/resources/: fabric.mod.json  kiritclient.mixins.json
kiritclient-mod/src/main/resources/assets/kiritclient/lang/: de_de.json  en_us.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/auth/: microsoft.rs
src-tauri/src/minecraft/: assets.rs  download.rs  java.rs  launcher.rs  libraries.rs  mod.rs  versions.rs
src-tauri/src/modloaders/: fabric.rs
src-tauri/src/profiles/: manager.rs
src/components/layout/: CursorGlow.tsx  Layout.tsx  Sidebar.tsx  Titlebar.tsx
src/components/profiles/: InstanceDetail.tsx  ModSearch.tsx  ResourceSearch.tsx
src/components/ui/: Modal.tsx  SkinRenderer.tsx
src/lib/: i18n.tsx  useDraggable.ts
src/pages/: AccountsPage.tsx  CosmeticsPage.tsx  HomePage.tsx  ProfilesPage.tsx  ServersPage.tsx  SettingsPage.tsx  SkinsPage.tsx
src/stores/: authStore.ts  launchStore.ts  profileStore.ts  settingsStore.ts  updateStore.ts
src/styles/: globals.css
website/: animations.js  index.html  particles.js  style.css
(+10 files in other folders)
