[package]
name = "kirit-client"
version = "0.1.0"
description = "KiritClient - Custom Minecraft Launcher"
authors = ["ImKirit"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
zip = "2"
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
tauri-plugin-dialog = "2.6.0"
